# escalating-esqueleto

./: .gitignore  Makefile  README.md  escalating-esqueleto.cabal  flake.nix  reset.sql  setup.sql
answers/: Answers.hs  EE00_StartingOut.hs  EE00_iWantToLearnEsqueleto.hs  EE01_Select.hs  EE01_allFlavorNameValues.hs  EE01_allFlavorNames.hs  EE01_allFlavors.hs  EE01_customersSharingFoundersBirthday.hs  EE01_customersWithoutBirthdaysWithFlavors.hs  EE01_dairyFreeFlavors.hs  EE01_flavorIdsFromNames.hs  EE02_customerGroups.hs  EE02_favoriteFlavors.hs  EE02_flavorPopularity.hs  EE02_largestGroup.hs  EE03_leftJoin.hs  EE03_orderBy.hs  EE03_project.hs  EE03_runDB.hs  EE03_select.hs  EE03_val.hs  EE04_customerPurchases.hs  EE04_flavorNameValues.hs  EE04_flavorNames.hs  EE04_getChocolate.hs  EE04_mostPopularFlavor.hs  EE0a_iWantToLearnEsqueleto.hs  EE1a_allFlavors.hs  EE1b_allFlavorNameValues.hs  EE1c_allFlavorNames.hs  EE1d_dairyFreeFlavors.hs  EE1e_flavorIdsFromNames.hs  EE1f_customersWithoutBirthdaysWithFlavors.hs  EE2a_favoriteFlavors.hs  EE2b_flavorPopularity.hs  EE2c_largestGroup.hs  EE2d_customerGroups.hs  EE3a_runDB.hs  EE3b_select.hs  EE3c_val.hs  (+8 more)
exercises/: EE00_StartingOut.hs  EE01_Select.hs  EE02_Join.hs  EE03_TypeZoo.hs  EE04_Errors.hs  EE0_StartingOut.hs  EE1_Select.hs  EE2_Join.hs  EE3_TypeZoo.hs  EE4_Errors.hs  Exercises.hs
hints/: EE01_allFlavorNameValues.md  EE01_allFlavorNames.md  EE01_allFlavors.md  EE01_customersSharingFoundersBirthday.md  EE01_customersWithoutBirthdaysWithFlavors.md  EE01_dairyFreeFlavors.md  EE01_flavorIdsFromNames.md  EE02_customerGroups.md  EE02_favoriteFlavors.md  EE02_sizeOfLargestGroup.md  EE03_leftJoin.md  EE03_orderBy.md  EE03_runDB.md  EE03_select.md  EE03_val.md  EE04_customerPurchases.md  EE1a_allFlavors.md  EE1b_allFlavorNameValues.md  EE1c_allFlavorNames.md  EE1f_customersWithoutBirthdaysWithFlavors.md  EE2b_flavorPopularity.md  EE3d_orderBy.md  EE3e_project.md  EE4a_getChocolate.md  EE4b_flavorNames.md  EE4c_flavorNameValues.md  EE4d_mostPopularFlavor.md
lib/: DerivePostgresEnumTH.hs  Schema.hs  Types.hs  schema.persistentmodels
test/: Main.hs
