cabal-version:      3.0
name:               escalating-esqueleto
version:            0.1.0.0
synopsis:           Esqueleto exercises of escalating difficulty
build-type:         Simple
extra-doc-files:    README.md
author:             Mitchell Vitez
maintainer:         mitchell@vitez.me

common common-options
  ghc-options:   -Wall -fdefer-typed-holes
  build-depends: base
               , esqueleto ^>=3.5
               , monad-logger ^>=0.3
               , mtl ^>=2.3
               , path-pieces ^>=0.2
               , persistent ^>=2.14
               , persistent-postgresql ^>=2.13
               , text ^>=2.0
               , time ^>=1.12
               , uuid ^>=1.3

library escalating-esqueleto-lib
  import:           common-options
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:  Schema
                  , Types

library escalating-esqueleto-exercises
  import:           common-options
  default-language: Haskell2010
  hs-source-dirs:   exercises
  exposed-modules:  Exercises
  build-depends:    escalating-esqueleto-lib
  other-modules:    EE00_StartingOut
                  , EE01_Select

library escalating-esqueleto-answers
  import:           common-options
  default-language: Haskell2010
  hs-source-dirs:   answers
  exposed-modules:  Answers
  build-depends:    escalating-esqueleto-lib
  other-modules:    EE00_StartingOut
                  , EE01_Select

test-suite escalating-esqueleto-test
  import:           common-options
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    escalating-esqueleto-lib
                  , escalating-esqueleto-exercises
                  , escalating-esqueleto-answers
                  , hspec ^>=2.11
