cabal-version:      3.0
name:               escalating-esqueleto
version:            0.1.0.0
synopsis:           Esqueleto exercises of escalating difficulty
build-type:         Simple
extra-doc-files:    README.md
author:             Mitchell Vitez
maintainer:         mitchell@vitez.me

common common-options
  ghc-options: -Wall -fdefer-typed-holes
  build-depends: base
               , bytestring ^>=0.11
               , aeson ^>=2.1
               , esqueleto ^>=3.5
               , monad-logger ^>=0.3
               , mtl ^>=2.3
               , path-pieces ^>=0.2
               , pcre-heavy ^>=1.0
               , persistent ^>=2.14
               , persistent-postgresql ^>=2.13
               , string-conversions ^>=0.4
               , template-haskell ^>=2.20
               , text ^>=2.0
               , time ^>=1.12
               , uuid ^>=1.3

library escalating-esqueleto-lib
  import: common-options
  ghc-options: -Wall -Werror -fdefer-typed-holes
  default-language: Haskell2010
  hs-source-dirs: lib
  exposed-modules: Schema
                 , Types
  other-modules: DerivePostgresEnumTH

library escalating-esqueleto-exercises
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: exercises
  exposed-modules: Exercises
  build-depends: escalating-esqueleto-lib
  other-modules: EE0_StartingOut
               , EE1_Select
               , EE2_Join
               , EE3_TypeZoo
               , EE4_Errors
  default-extensions: TypeApplications
                    , OverloadedRecordDot
                    , OverloadedStrings
                    , PartialTypeSignatures

library escalating-esqueleto-answers
  import: common-options
  default-language: Haskell2010
  ghc-options: -Wall -Werror -fdefer-typed-holes
  hs-source-dirs: answers
  exposed-modules: Answers
  build-depends: escalating-esqueleto-lib
  default-extensions: TypeApplications
                    , OverloadedRecordDot
                    , OverloadedStrings
  other-modules: EE0a_iWantToLearnEsqueleto
               , EE1a_allFlavors
               , EE1b_allFlavorNameValues
               , EE1c_allFlavorNames
               , EE1d_dairyFreeFlavors
               , EE1e_flavorIdsFromNames
               , EE1f_customersWithoutBirthdaysWithFlavors
               , EE2a_favoriteFlavors
               , EE2b_flavorPopularity
               , EE2c_largestGroup
               , EE2d_customerGroups
               , EE3a_runDB
               , EE3b_select
               , EE3c_val
               , EE3d_orderBy
               , EE3e_project
               , EE3f_leftJoin
               , EE4a_getChocolate
               , EE4b_flavorNames
               , EE4c_flavorNameValues
               , EE4d_mostPopularFlavor
               , EE4e_customerPurchases

test-suite escalating-esqueleto-test
  import:           common-options
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    escalating-esqueleto-lib
                  , escalating-esqueleto-exercises
                  , escalating-esqueleto-answers
                  , hspec ^>=2.11
